fixed nav-menu z-index problems

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -45,6 +45,7 @@ nav {
 
 .nav-menu {
 	position: absolute;
+	z-index: 999;
 	top: 100%;
 	left: 0;
 	width: 100%;
@@ -66,9 +67,10 @@ nav {
 }
 
 .nav-menu li {
+	display: grid;
+	place-items: center;
 	height: 25%;
-	padding: 0.2rem 0.4rem;
-	margin: 3rem 0.5rem;
+	width: 100%;
 	border-radius: 4px;
 	transition: background-color 250ms ease-out, color 250ms ease-out;
 }
